--- a/Basic-HTML-Bio.html
+++ b/Basic-HTML-Bio.html
@@ -9,7 +9,7 @@
 
   <h1>Michelle Eva Fernandez</h1>
 
-  <img src="IMG_5796.jpeg" alt="Your Name">
+  <img src="https://placehold.it/200x200" alt="Your Name">
 
   <p>This page was created for a Data Science bootcamp at UTSA</p>
   <p>I am a mommy of two with no pets - they're a lot of work.</p>
